# LinKo-Server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-ec2.yml
alembic/: env.py
alembic/versions/: 20260508_0001_create_initial_tables.py  20260509_0002_create_youtube_channels.py  20260511_0003_create_lessons.py  20260511_0004_create_waitlist_entries.py  20260511_0005_add_is_preview_to_lessons.py
app/: main.py
app/api/: auth.py  flashcards.py  lessons.py  public.py  users.py  videos.py  waitlist.py  youtube.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  lesson.py  user.py  video.py  waitlist.py  youtube_channel.py
app/schemas/: auth.py  flashcard.py  lesson.py  user.py  video.py  waitlist.py  youtube_channel.py
app/services/: discord.py  flashcards.py  google_auth.py  lesson_artifacts.py  subtitles.py  transcripts.py  youtube.py
dev/: google-login-test.html
docs/superpowers/plans/: 2026-05-08-fastapi-mvp-implementation.md  2026-05-08-youtube-video-eligibility.md  2026-05-09-payment-system-implementation.md  2026-05-09-youtube-channel-sync-implementation.md  (+1 more)
tests/: test_auth_api.py  test_discord_service.py  test_flashcards_api.py  test_google_auth.py  test_lesson_artifacts.py  test_lesson_models.py  test_lessons_api.py  test_models.py  test_public_api.py  test_security.py  test_transcripts.py  test_videos_api.py  test_waitlist_api.py  test_youtube_channels_api.py  test_youtube_service.py
(+4 files in other folders)
