[project]
name = "linko-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "email-validator>=2.1",
  "fastapi>=0.111",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
  "pydantic-settings>=2.2",
  "pyjwt>=2.8",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
